# so.unicode

./: .gitignore  CMakeLists.txt  README.md  example.cpp  sopa.json
include/: error.hpp  unicode.hpp  utf.hpp
source/: CMakeLists.txt  cast.hpp  escape.cpp  mbcs.cpp  utf16.cpp  utf32.cpp  utf8.cpp  wild.cpp
